--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,19 +18,27 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Sam Aronson
+email: saronson@haverford.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is Sam Aronson's personal website. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  aronsa
+linkedin_username: samaronson
 
 # Build settings
-theme: minima
+remote_theme: thelehhman/plainwhite-jekyll
+
+plainwhite:
+    name: Sam Aronson
+    tagline: Computer Science and Philosophy major at Haverford College
+
+    social_links:
+        github: aronsa
+        linkedIn: in/samaronson
+        email: saronson@haverford.edu
+
 plugins:
   - jekyll-feed
 
